--- a/background-ex7-transp.html
+++ b/background-ex7-transp.html
@@ -30,9 +30,9 @@
     <script type="text/javascript" src="/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
     <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <!-- <link rel="stylesheet" href="./style.css"> -->
+    <!-- <link rel="stylesheet" href="./style.css"> --
     <link rel="stylesheet" href="./style[1].css">
-    <link rel="stylesheet" href="./nav[1].css">
+    <link rel="stylesheet" href="./nav[1].css"> -->
     <link rel="icon" type="image/png" href="./weed.jpg">
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <link rel=”stylesheet” href=”https://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
