--- a/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
+++ b/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
@@ -81,7 +81,7 @@
                     <input class="trigger" type="checkbox" id="mainNavButton">
                     <label for="mainNavButton" onclick>Menu</label>
                     <ul>
-                        <li><a href="./index.html">Home</a></li>
+              ko          <li><a href="./index.html">Home</a></li>
                         <li><a href="./index[1].html">About Us</a></li>
                         <li><a href="./membership.html">Products</a></li>
                         <li><a href="./news.html">Blog</a></li>
