--- a/about.html
+++ b/about.html
@@ -62,13 +62,13 @@
             <![endif]-->
     </head>
     <body>
-        <div class="container">
+        <div class="data" id="container">
             <div class="row">
                 <div class="col-12">
                     <nav role="navigation" id="nav">
                         <input class="trigger" type="checkbox" id="mainNavButton">
                         <label for="mainNavButton" onclick>Menu</label>
-                        <<ul>
+                        <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="./membership.html">Membership</a></li>
